--- a/releases/ghost.yaml
+++ b/releases/ghost.yaml
@@ -25,6 +25,11 @@ spec:
         cpu: 10m
     service:
       type: ClusterIP
+    externalDatabase:
+      password: "ghost"
+    mariadb:
+      db:
+        password: "ghost"
     mariadb:
       master:
         persistence:
